--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  
 }
 
 .App-logo {
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
   color: white;
 }
 
@@ -35,4 +35,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.teste{
+  margin: 0px 0px 0px -10px;
 }
